--- a/main.tex
+++ b/main.tex
@@ -95,8 +95,8 @@
     \footnotesize \raisebox{-0.1\height}
     \faPhone\ \underline{(+65) 8268 8969} ~ 
     {\faEnvelope\  \underline{kuekguanjiegabriel@gmail.com}} ~ 
-    {\faLinkedin\ \underline{\href{https://www.linkedin.com/in/michael-scott/}{linkedin.com/in/gabrielxkuek}}  ~
-    {\faGithub\ \underline{\href{https://github.com/m-scott}{github.com/gabrielxkuek}} ~
+    {\faLinkedin\ \underline{\href{https://www.linkedin.com/in/gabrielxkuek/}{linkedin.com/in/gabrielxkuek}}  ~
+    {\faGithub\ \underline{\href{https://github.com/gabrielxkuek}{github.com/gabrielxkuek}} ~
     \vspace{-8pt}
 \end{center}
 
