--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@
 \newcommand{\resumeProjectHeading}[2]{
   \vspace{-2pt}\item
     \begin{tabular*}{1.0\textwidth}[t]{l@{\extracolsep{\fill}}r}
-      #1 & \small #2 \\
+      #1 & \textbf{\small #2} \\
     \end{tabular*}\vspace{-7pt}
 }
 
