current most updated resume

--- a/main.tex
+++ b/main.tex
@@ -92,11 +92,12 @@
 %----------HEADING----------
 \begin{center}
     {\Large \scshape Gabriel Kuek} \\[2mm]
-    \footnotesize \raisebox{-0.1\height}
+    \footnotesize
     \faPhone\ \underline{(+65) 8268 8969} ~ 
     {\faEnvelope\  \underline{kuekguanjiegabriel@gmail.com}} ~ 
-    {\faLinkedin\ \underline{\href{https://www.linkedin.com/in/gabrielxkuek/}{linkedin.com/in/gabrielxkuek}}  ~
-    {\faGithub\ \underline{\href{https://github.com/gabrielxkuek}{github.com/gabrielxkuek}} ~
+    {\faHome\ \underline{43 Jalan Senyum, Singapore}} \\[1mm]
+    {\faLinkedin\ \underline{\href{https://www.linkedin.com/in/gabrielxkuek/}{linkedin.com/in/gabrielxkuek}}}  ~
+    {\faGithub\ \underline{\href{https://github.com/gabrielxkuek}{github.com/gabrielxkuek}}}
     \vspace{-8pt}
 \end{center}
 
@@ -104,9 +105,8 @@
 \section{Executive Summary}
   \resumeSubHeadingListStart
     \resumeItemListStart
-        \resumeItem{Software Engineer with a passion for Web Development and experience in both front-end and back-end web development.}
-        \resumeItem{Demonstrated leadership ability through organizing a national software competition in collaboration with Apple, reaching 90+ participants from 20 secondary schools.}
-        \resumeItem{Strong foundation in full-stack web development with practical experience creating gamified applications, management platforms, and working with agile methodology through scrum.}
+        \resumeItem{\textbf{Full-stack Software Engineer} with hands-on experience in JavaScript, ReactJS, ExpressJS, and PostgreSQL, demonstrated through personal projects including a fullstack incentivized activity tracking platform with reward mechanics.}
+        \resumeItem{\textbf{Demonstrated leadership} by organizing an application development competition endorsed by Apple, engaging over 90 students from 20+ educational institutions.}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -119,7 +119,7 @@
       {Diploma in Information Technology | Minor in Data \& Artificial Intelligence}{Singapore}
     \resumeItemListStart
         \resumeItem{cGPA: \textbf{3.81} | Last Semester GPA: \textbf{3.91} | \textbf{CCA Gold with Honours}}
-        \resumeItem{Key Coursework: Full-Stack Development, CI/CD, Secure Coding, Agile, Database Management, Java Enterprise Applications, Machine Learning}
+        \resumeItem{Key Coursework: Full-Stack Development, CI/CD, Secure Coding, Agile, Database Management, Java Enterprise Applications, Machine Learning, Agile Development Methodologies}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -128,12 +128,12 @@
 \section{Technical Experience}
     \resumeSubHeadingListStart
             %-----------WORK-RELATED-----------
-            \resumeSubheading{Institute of Management Consultants (Singapore)}{Jan 2025 -- May 2025}{Fullstack Web Developer}{Singapore} 
+            \resumeSubheading{Institute of Management Consultants (Singapore)}{Jan 2025 -- Aug 2025}{Fullstack Web Developer}{Singapore} 
                 \resumeItemListStart
-                    \resumeItem{Engineered a \textbf{PDF export system} for dynamically generating form responses compliant with \textbf{BE Form legal documentation standards}}
-                    \resumeItem{Developed a \textbf{form versioning control system} reducing data inconsistencies}
+                    \resumeItem{Engineered a \textbf{PDF export system} for dynamically generating form responses compliant with 100\% of \textbf{BE Form legal documentation standards}}
+                    \resumeItem{Developed a \textbf{form versioning control system}, reducing the need for manual tracking by 80\%}
                     \resumeItem{Redesigned the organization management UX, enhancing workflow efficiency for \textbf{500+ users}}
-                    \resumeItem{Collaborated with a team of \textbf{14 developers} using \textbf{Scrum methodology} with \textbf{bi-weekly iterations}}
+                    \resumeItem{Coordinated with a team of \textbf{14 developers}, implementing \textbf{Agile principles} through bi-weekly sprints, daily standups, retrospectives, and continuous delivery}
                 \resumeItemListEnd
 
             %-----------PROJECTS-----------
@@ -141,26 +141,28 @@
                     {\textbf{AuthINC}}{Jun 2024 -- Dec 2024}
                 \resumeItemListStart
                     \resumeItem{Developed a \textbf{file compression tool} using \textbf{Cloudinary} and \textbf{Multer}, reducing file sizes by up to \textbf{80\%}}
-                    \resumeItem{Implemented a \textbf{real-time logs monitoring system} for tracking API calls and user interactions}
-                    \resumeItem{Collaborated with a team of \textbf{29 developers} using \textbf{Github} and \textbf{CICD Pipeline} in this intensive academic simulation}
+                    \resumeItem{Implemented a \textbf{real-time logs monitoring and alert system} for tracking all API calls and user interactions made over the span of 7 months, across the entire webapp}
+                    \resumeItem{Orchestrated with a team of \textbf{29 developers}, utilizing \textbf{Git} and \textbf{CICD Pipeline}}
                 \resumeItemListEnd
                 
             \resumeProjectHeading
                     {\textbf{{EmpowerMWH}} $|$ \emph{\href{https://mwh-minimart-system.vercel.app/}{Website}{ $|$ }\href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source Code}}}{ReactJS $|$ ExpressJS $|$ Firebase}
                   \resumeItemListStart
-                    \resumeItem{Designed and Built gamified task management system with \textbf{scalable architecture} for \textbf{Muhammadiyah Welfare Home}, serving \textbf{over 39 troubled youth}}
+                    \resumeItem{Pioneered a gamified task management and reward system with a \textbf{scalable, component-based architecture} following the \textbf{Model-View-Controller} pattern for \textbf{Muhammadiyah Welfare Home}, housing \textbf{over 39 troubled youth}.}
                   \resumeItemListEnd
                   
             \resumeProjectHeading
                     {\textbf{ConTrack} $|$ \emph{\href{https://contrackapp.vercel.app/}{Website}{ $|$ }\href{https://github.com/calvinseptyanto/ibmgranite}{Source Code}}}{ReactJS $|$ Supabase $|$ Flask $|$ IBMGranite}
                   \resumeItemListStart
-                    \resumeItem{Engineered a robust document collaboration system with state management, sharable links, and efficient PDF processing pipeline}
+                    \resumeItem{Constructed a document collaboration webapp featuring React-based state management, secure sharable links, and an optimized PDF processing pipeline, while supporting \textbf{100+ concurrent users}}
                   \resumeItemListEnd
                   
             \resumeProjectHeading
                 {\textbf{Rehabify} (Startup)}{ReactJS $|$ ExpressJS $|$ Firebase $|$ PostgreSQL $|$ MediaPipe}
               \resumeItemListStart
-                \resumeItem{Co-founded platform that translates physiotherapy exercises into game controls; led pitch presentations while building authentication system and hand-tracking piano game among other features}
+                \resumeItem{Co-founded platform that translates physiotherapy exercises into game controls}
+                \resumeItem{Delivered pitch presentations at multiple competitions, advancing to the finals and securing over \$5,000 in funding for Rehabify.} 
+                \resumeItem{Engineered authentication system and hand-tracking piano game with over 90\% accuracy among other features}
               \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -172,15 +174,15 @@
             {Apple Developers' Society (Singapore Polytechnic)}{Mar 2024 -- Mar 2025}
             {Founding Member \& Operations Lead}{Singapore}
             \resumeItemListStart
-                \resumeItem{Spearheaded a national software competition, collaborating with \textbf{Apple},  reaching \textbf{90+ participants} from \textbf{20 secondary schools}}
-                \resumeItem{Planned Swift bootcamps and workshops for students with limited coding experience}
+                \resumeItem{Spearheaded a national software competition in collaboration with Apple, attracting \textbf{90+ voluntary contestants} spanning \textbf{20 different secondary schools}}
+                \resumeItem{Planned in-depth Swift App Development bootcamps and workshops for polytechnic and secondary students with limited coding experience, amounting to combined total of \textbf{100+ students}}
             \resumeItemListEnd
             
         \resumeSubheading
             {Community Service and Cultural Club (Singapore Polytechnic)}{Apr 2023 -- Jan 2024}
             {Subcommittee Member - Welfare}{Singapore}
             \resumeItemListStart
-                \resumeItem{Collaborated with National Kidney Foundation organizing events for dialysis patients}
+                \resumeItem{Organized a community engagement event with National Kidney Foundation, improving quality of life for 50+ dialysis patients through welfare activities}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -192,7 +194,7 @@
             {Youth Action Challenge \& NTU Kumar Sustainability Prize}{2024 -- 2025}
             {\$5,000 Grant Recipient \& KSIP Finalist (Top 10)}{Singapore}
             \resumeItemListStart
-                \resumeItem{Secured \textbf{\$5,000 funding} for \textbf{Rehabify} and reached finals in KSIP competition with \textbf{\$50,000 grand prize}}
+                \resumeItem{Secured \textbf{\$5,000} funding for Rehabify through competitive pitch presentation and business plan development, advancing to finals (top 10) in KSIP competition with $50,000 grand prize}
             \resumeItemListEnd
             
         \resumeSubheading
@@ -210,7 +212,8 @@
     \small{\item{   
      \textbf{Languages}{: \textbf{JavaScript} (primary), Swift, Python, Java, SQL, HTML5, CSS} \\[1mm]
      \textbf{Developer Tools}{: Postman, AWS, Azure, Git, Firebase, Supabase, Docker} \\[1mm]
-     \textbf{Libraries/Frameworks}{: ReactJS, NodeJS, ExpressJS, Spring Boot, PostgreSQL} \\ [1mm]
+     \textbf{Libraries/Frameworks}{: ReactJS, NodeJS, ExpressJS, Prisma, Spring Boot, PostgreSQL} \\ [1mm]
+     \textbf{Methodologies}{: Agile, Scrum, Kanban, Test-Driven Development, CI/CD} \\ [1mm]
     }}
  \end{itemize}
 \vspace{-16pt}
