Update main.tex to fix formatting and fix year range typo

--- a/main.tex
+++ b/main.tex
@@ -194,11 +194,11 @@
             {Youth Action Challenge \& NTU Kumar Sustainability Prize}{2024 -- 2025}
             {\$5,000 Grant Recipient \& KSIP Finalist (Top 10)}{Singapore}
             \resumeItemListStart
-                \resumeItem{Secured \textbf{\$5,000} funding for Rehabify through competitive pitch presentation and business plan development, advancing to finals (top 10) in KSIP competition with $50,000 grand prize}
+                \resumeItem{Secured \textbf{\$5,000} funding for Rehabify through competitive pitch presentation and business plan development, advancing to finals (top 10) in KSIP competition with \$50,000 grand prize}
             \resumeItemListEnd
             
         \resumeSubheading
-            {Hackathon Achievements}{2023 -- 2024}
+            {Hackathon Achievements}{2023 -- 2025}
             {Multiple Award-Winning Projects}{Singapore}
             \resumeItemListStart
                 \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) | \textbf{SimplifyNext RPA}: 1st Place (2024) | \textbf{MindfulHacks}: Finalist (2023)}
