--- a/main.tex
+++ b/main.tex
@@ -206,7 +206,7 @@
     \resumeSubHeadingListEnd
 \vspace{-16pt}
 
-%-----------PROGRAMMING SKILLS-----------
+%-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{   
@@ -215,6 +215,28 @@
      \textbf{Libraries/Frameworks}{: ReactJS, NodeJS, ExpressJS, Prisma, Spring Boot, PostgreSQL} \\ [1mm]
      \textbf{Methodologies}{: Agile, Scrum, Kanban, Test-Driven Development, CI/CD} \\ [1mm]
     }}
+ \end{itemize}
+\vspace{-16pt}
+
+%-----------REFERENCES-----------
+\section{References}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{   
+     \textbf{Ms. Elynn Chee}, Senior Specialist (Teaching \& Learning), Singapore Polytechnic \\
+     \textit{Personal Tutor \& Lecturer for Design for User Interaction (2023-2024)} \\
+     Phone: (65) 6772 1241 | Email: \href{mailto:Elynn_CHEE@sp.edu.sg}{Elynn\_CHEE@sp.edu.sg} \\[1mm]
+     
+     \textbf{Mr. Lim Kim Hoe}, Lecturer, Singapore Polytechnic \\
+     \textit{Personal Tutor \& Lecturer for Database Systems (2024-2025)} \\
+     Phone: (65) 6870 6177 | Email: \href{mailto:LIM_Kim_Hoe@sp.edu.sg}{LIM\_Kim\_Hoe@sp.edu.sg} \\[1mm]
+     
+     \textbf{Mr. Edwin Lim}, Senior Specialist (Software \& Applications), Singapore Polytechnic \\
+     \textit{CCA Advisor for Apple Developers' Society \& Lecturer for Fundamentals of Programming (2) (2023-2024)} \\
+     Phone: (65) 6772 1992 | Email: \href{mailto:Edwin_LIM@sp.edu.sg}{Edwin\_LIM@sp.edu.sg} \\[1mm]
+     
+ \end{itemize}
+\vspace{-16pt}
+     
  \end{itemize}
 \vspace{-16pt}
 
