--- a/main.tex
+++ b/main.tex
@@ -70,10 +70,11 @@
     \end{tabular*}\vspace{-7pt}
 }
 
-\newcommand{\resumeProjectHeading}[2]{
+\newcommand{\resumeProjectHeading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{1.0\textwidth}[t]{l@{\extracolsep{\fill}}r}
-      #1 & \textbf{\small #2} \\
+      \textbf{#1} & \textbf{\small #2} \\ % Project name | Date
+      \textit{\small #3} & \small #4 \\   % Tech stack | Links
     \end{tabular*}\vspace{-7pt}
 }
 
@@ -105,8 +106,7 @@
 \section{Executive Summary}
   \resumeSubHeadingListStart
     \resumeItemListStart
-        \resumeItem{\textbf{Full-stack Software Engineer} with hands-on experience in JavaScript, ReactJS, ExpressJS, and PostgreSQL, demonstrated through personal projects including a fullstack incentivized activity tracking platform with reward mechanics.}
-        \resumeItem{\textbf{Demonstrated leadership} by organizing an application development competition endorsed by Apple, engaging over 90 students from 20+ educational institutions.}
+        \resumeItem{\textbf{Full-stack Software Engineer} with hands-on experience in JavaScript, ReactJS, ExpressJS, and PostgreSQL through personal projects, and \textbf{demonstrated leadership} by organizing an Apple-endorsed application development competition engaging 90+ students from 20+ institutions}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -118,7 +118,7 @@
       {Singapore Polytechnic}{Expected Graduation: Apr 2026}
       {Diploma in Information Technology | Minor in Data \& Artificial Intelligence}{Singapore}
     \resumeItemListStart
-        \resumeItem{cGPA: \textbf{3.81} | Last Semester GPA: \textbf{3.91} | \textbf{CCA Gold with Honours}}
+        \resumeItem{cGPA: \textbf{3.85} | Last Semester GPA: \textbf{4.00} | \textbf{CCA Gold with Honours}}
         \resumeItem{Key Coursework: Full-Stack Development, CI/CD, Secure Coding, Agile, Database Management, Java Enterprise Applications, Machine Learning, Agile Development Methodologies}
     \resumeItemListEnd
   \resumeSubHeadingListEnd
@@ -128,7 +128,11 @@
 \section{Technical Experience}
     \resumeSubHeadingListStart
             %-----------WORK-RELATED-----------
-            \resumeSubheading{Institute of Management Consultants (Singapore)}{Jan 2025 -- Aug 2025}{Fullstack Web Developer}{Singapore} 
+            \resumeProjectHeading
+                {Institute of Management Consultants (Singapore)}
+                {Jan 2025 -- Aug 2025}
+                {ReactJS, ExpressJS, PostgreSQL}
+                {\href{https://www.youtube.com/watch?v=1SOSWwROc7c}{Demo}}
                 \resumeItemListStart
                     \resumeItem{Engineered a \textbf{PDF export system} for dynamically generating form responses compliant with 100\% of \textbf{BE Form legal documentation standards}}
                     \resumeItem{Developed a \textbf{form versioning control system}, reducing the need for manual tracking by 80\%}
@@ -138,32 +142,43 @@
 
             %-----------PROJECTS-----------
             \resumeProjectHeading
-                    {\textbf{AuthINC}}{Jun 2024 -- Dec 2024}
+                {AuthINC}
+                {Jun 2024 -- Dec 2024}
+                {ReactJS, ExpressJS, PostgreSQL}
+                {}
                 \resumeItemListStart
-                    \resumeItem{Developed a \textbf{file compression tool} using \textbf{Cloudinary} and \textbf{Multer}, reducing file sizes by up to \textbf{80\%}}
-                    \resumeItem{Implemented a \textbf{real-time logs monitoring and alert system} for tracking all API calls and user interactions made over the span of 7 months, across the entire webapp}
-                    \resumeItem{Orchestrated with a team of \textbf{29 developers}, utilizing \textbf{Git} and \textbf{CICD Pipeline}}
+                    \resumeItem{Collaborated with a team of \textbf{29 developers}, utilizing \textbf{Git} and \textbf{CI/CD Pipeline} to develop a \textbf{file compression tool} using \textbf{Cloudinary} and \textbf{Multer}, reducing file sizes by up to \textbf{80\%}}
+                    \resumeItem{Architected a \textbf{comprehensive logging and analytics system} using a cron job to periodically perform IP geolocation analysis on thousands of API calls every hour, connecting to Gmail to provide alerts for automated security monitoring}
                 \resumeItemListEnd
                 
             \resumeProjectHeading
-                    {\textbf{{EmpowerMWH}} $|$ \emph{\href{https://mwh-minimart-system.vercel.app/}{Website}{ $|$ }\href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source Code}}}{ReactJS $|$ ExpressJS $|$ Firebase}
-                  \resumeItemListStart
+                {EmpowerMWH}
+                {Jan 2025}
+                {ReactJS, ExpressJS, Firebase}
+                {\href{https://www.youtube.com/watch?v=c_-i1OlLHHE}{Demo} \;|\; \href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source}}
+                \resumeItemListStart
                     \resumeItem{Pioneered a gamified task management and reward system with a \textbf{scalable, component-based architecture} following the \textbf{Model-View-Controller} pattern for \textbf{Muhammadiyah Welfare Home}, housing \textbf{over 39 troubled youth}.}
-                  \resumeItemListEnd
+                \resumeItemListEnd
                   
             \resumeProjectHeading
-                    {\textbf{ConTrack} $|$ \emph{\href{https://contrackapp.vercel.app/}{Website}{ $|$ }\href{https://github.com/calvinseptyanto/ibmgranite}{Source Code}}}{ReactJS $|$ Supabase $|$ Flask $|$ IBMGranite}
-                  \resumeItemListStart
+                {ConTrack}
+                {Feb 2025}
+                {ReactJS, Supabase, Flask, IBM Granite}
+                {\href{https://lablab.ai/event/generative-ai-hackathon-with-ibm-granite/hawk-tuah-reborn/contrack}{Demo} \;|\; \href{https://github.com/calvinseptyanto/ibmgranite}{Source}}
+                \resumeItemListStart
                     \resumeItem{Constructed a document collaboration webapp featuring React-based state management, secure sharable links, and an optimized PDF processing pipeline, while supporting \textbf{100+ concurrent users}}
-                  \resumeItemListEnd
+                \resumeItemListEnd
                   
             \resumeProjectHeading
-                {\textbf{Rehabify} (Startup)}{ReactJS $|$ ExpressJS $|$ Firebase $|$ PostgreSQL $|$ MediaPipe}
-              \resumeItemListStart
-                \resumeItem{Co-founded platform that translates physiotherapy exercises into game controls}
-                \resumeItem{Delivered pitch presentations at multiple competitions, advancing to the finals and securing over \$5,000 in funding for Rehabify.} 
-                \resumeItem{Engineered authentication system and hand-tracking piano game with over 90\% accuracy among other features}
-              \resumeItemListEnd
+                {Rehabify}
+                {Jan 2025 -- Ongoing}
+                {Startup Project}
+                {\href{https://youtu.be/Ty8J75FkdlQ}{Demo}}
+                \resumeItemListStart
+                    \resumeItem{Co-founded platform that translates  movements exercises into game controls}
+                    \resumeItem{Delivered pitch presentations at multiple competitions, advancing to the finals and securing over \$30,000 in seed funding for Rehabify.}
+                    \resumeItem{Conducted weekly sessions with Lions Befrienders and Red Cross Singapore to encourage active ageing in elderly}
+                \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-16pt}
 
@@ -171,16 +186,16 @@
 \section{Volunteer \& Leadership}
     \resumeSubHeadingListStart
         \resumeSubheading
-            {Apple Developers' Society (Singapore Polytechnic)}{Mar 2024 -- Mar 2025}
-            {Founding Member \& Operations Lead}{Singapore}
+            {Apple Developers' Society}{Mar 2024 -- Mar 2025}
+            {Founding Member \& Operations Lead}{Singapore Polytechnic}
             \resumeItemListStart
-                \resumeItem{Spearheaded a national software competition in collaboration with Apple, attracting \textbf{90+ voluntary contestants} spanning \textbf{20 different secondary schools}}
+                \resumeItem{Initiated a national software competition in collaboration with Apple, attracting \textbf{90+ voluntary contestants} spanning \textbf{20 different secondary schools}}
                 \resumeItem{Planned in-depth Swift App Development bootcamps and workshops for polytechnic and secondary students with limited coding experience, amounting to combined total of \textbf{100+ students}}
             \resumeItemListEnd
             
         \resumeSubheading
-            {Community Service and Cultural Club (Singapore Polytechnic)}{Apr 2023 -- Jan 2024}
-            {Subcommittee Member - Welfare}{Singapore}
+            {Community Service and Cultural Club}{Apr 2023 -- Jan 2024}
+            {Subcommittee Member - Welfare}{Singapore Polytechnic}
             \resumeItemListStart
                 \resumeItem{Organized a community engagement event with National Kidney Foundation, improving quality of life for 50+ dialysis patients through welfare activities}
             \resumeItemListEnd
@@ -191,17 +206,19 @@
 \section{Awards}
     \resumeSubHeadingListStart
         \resumeSubheading
-            {Youth Action Challenge \& NTU Kumar Sustainability Prize}{2024 -- 2025}
-            {\$5,000 Grant Recipient \& KSIP Finalist (Top 10)}{Singapore}
+            {Youth Action Challenge \& Batey Challenge \& NTU Kumar Sustainability Prize}{2024 -- 2025}
+            {\$15,000 Grant Recipient \& Gold Award Recipient \& KSIP Finalist (Top 10)}{Singapore}
             \resumeItemListStart
-                \resumeItem{Secured \textbf{\$5,000} funding for Rehabify through competitive pitch presentation and business plan development, advancing to finals (top 10) in KSIP competition with \$50,000 grand prize}
+                \resumeItem{Secured over \textbf{\$30,000} of seed funding for Rehabify through competitive pitch presentation and business plan development, advancing to finals (top 10) in KSIP competition with \$50,000 grand prize}
             \resumeItemListEnd
             
         \resumeSubheading
             {Hackathon Achievements}{2023 -- 2025}
             {Multiple Award-Winning Projects}{Singapore}
             \resumeItemListStart
-                \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) | \textbf{SimplifyNext RPA}: 1st Place (2024) | \textbf{MindfulHacks}: Finalist (2023)}
+                \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) |
+                \textbf{Dell InnovateDash}: 1st Runner-Up |
+                \textbf{SimplifyNext RPA}: 1st Place (2024) | \textbf{MindfulHacks}: Finalist (2023)}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-16pt}
@@ -210,13 +227,12 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{   
-     \textbf{Languages}{: \textbf{JavaScript} (primary), Swift, Python, Java, SQL, HTML5, CSS} \\[1mm]
-     \textbf{Developer Tools}{: Postman, AWS, Azure, Git, Firebase, Supabase, Docker} \\[1mm]
-     \textbf{Libraries/Frameworks}{: ReactJS, NodeJS, ExpressJS, Prisma, Spring Boot, PostgreSQL} \\ [1mm]
-     \textbf{Methodologies}{: Agile, Scrum, Kanban, Test-Driven Development, CI/CD} \\ [1mm]
+     \textbf{Languages \& Web Technologies}{: JavaScript (primary), Python, Swift, Java, SQL, HTML5, CSS} \\[1mm]
+     \textbf{Frameworks}{: ReactJS, NodeJS, ExpressJS, Spring Boot, Flask} \\[1mm]
+     \textbf{Databases \& Cloud}{: PostgreSQL, Firebase, Supabase, AWS, Azure} \\[1mm]
+     \textbf{Tools \& Methodologies}{: Git, Postman, Docker, Agile, Scrum, CI/CD, ORM} \\
     }}
  \end{itemize}
-\vspace{-16pt}
 
 %-----------REFERENCES-----------
 \section{References}
