more sham updates

--- a/main.tex
+++ b/main.tex
@@ -155,7 +155,7 @@
                 {EmpowerMWH}
                 {Jan 2025}
                 {ReactJS, ExpressJS, Firebase}
-                {\href{https://www.youtube.com/watch?v=c_-i1OlLHHE}{Demo} \;|\; \href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source}}
+                {\href{https://www.youtube.com/watch?v=c_-i1OlLHHE}{Demo} \;|\; \href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source Code}}
                 \resumeItemListStart
                     \resumeItem{Pioneered a gamified task management and reward system with a \textbf{scalable, component-based architecture} following the \textbf{Model-View-Controller} pattern for \textbf{Muhammadiyah Welfare Home}, housing \textbf{over 39 troubled youth}.}
                 \resumeItemListEnd
@@ -164,16 +164,16 @@
                 {ConTrack}
                 {Feb 2025}
                 {ReactJS, Supabase, Flask, IBM Granite}
-                {\href{https://lablab.ai/event/generative-ai-hackathon-with-ibm-granite/hawk-tuah-reborn/contrack}{Demo} \;|\; \href{https://github.com/calvinseptyanto/ibmgranite}{Source}}
+                {\href{https://lablab.ai/event/generative-ai-hackathon-with-ibm-granite/hawk-tuah-reborn/contrack}{Demo} \;|\; \href{https://github.com/calvinseptyanto/ibmgranite}{Source Code}}
                 \resumeItemListStart
                     \resumeItem{Constructed a document collaboration webapp featuring React-based state management, secure sharable links, and an optimized PDF processing pipeline, while supporting \textbf{100+ concurrent users}}
                 \resumeItemListEnd
                   
             \resumeProjectHeading
-                {Rehabify}
+                {\href{https://rehabify.co}{Rehabify}}
                 {Jan 2025 -- Ongoing}
                 {Startup Project}
-                {\href{https://youtu.be/Ty8J75FkdlQ}{Demo}}
+                {\href{https://www.youtube.com/watch?v=rg0DGuQf09E}{Demo}}
                 \resumeItemListStart
                     \resumeItem{Co-founded platform that translates  movements exercises into game controls}
                     \resumeItem{Delivered pitch presentations at multiple competitions, advancing to the finals and securing over \$30,000 in seed funding for Rehabify.}
