Update hyperlinks to use underlined text format

--- a/main.tex
+++ b/main.tex
@@ -132,7 +132,7 @@
                 {Institute of Management Consultants (Singapore)}
                 {Jan 2025 -- Aug 2025}
                 {ReactJS, ExpressJS, PostgreSQL}
-                {\href{https://www.youtube.com/watch?v=1SOSWwROc7c}{Demo}}
+                {\href{https://www.youtube.com/watch?v=1SOSWwROc7c}{\textt{\underline{Demo}}}}
                 \resumeItemListStart
                     \resumeItem{Engineered a \textbf{PDF export system} for dynamically generating form responses compliant with 100\% of \textbf{BE Form legal documentation standards}}
                     \resumeItem{Developed a \textbf{form versioning control system}, reducing the need for manual tracking by 80\%}
@@ -155,7 +155,7 @@
                 {EmpowerMWH}
                 {Jan 2025}
                 {ReactJS, ExpressJS, Firebase}
-                {\href{https://www.youtube.com/watch?v=c_-i1OlLHHE}{Demo} \;|\; \href{https://github.com/GabrielxKuek/mwh-minimart-system}{Source Code}}
+                {\href{https://www.youtube.com/watch?v=c_-i1OlLHHE}{\textt{\underline{Demo}}} \;|\; \href{https://github.com/GabrielxKuek/mwh-minimart-system}{\textt{\underline{Source Code}}}}
                 \resumeItemListStart
                     \resumeItem{Pioneered a gamified task management and reward system with a \textbf{scalable, component-based architecture} following the \textbf{Model-View-Controller} pattern for \textbf{Muhammadiyah Welfare Home}, housing \textbf{over 39 troubled youth}.}
                 \resumeItemListEnd
@@ -164,16 +164,16 @@
                 {ConTrack}
                 {Feb 2025}
                 {ReactJS, Supabase, Flask, IBM Granite}
-                {\href{https://lablab.ai/event/generative-ai-hackathon-with-ibm-granite/hawk-tuah-reborn/contrack}{Demo} \;|\; \href{https://github.com/calvinseptyanto/ibmgranite}{Source Code}}
+                {\href{https://lablab.ai/event/generative-ai-hackathon-with-ibm-granite/hawk-tuah-reborn/contrack}{\textt{\underline{Demo}}} \;|\; \href{https://github.com/calvinseptyanto/ibmgranite}{\textt{\underline{Source Code}}}}
                 \resumeItemListStart
                     \resumeItem{Constructed a document collaboration webapp featuring React-based state management, secure sharable links, and an optimized PDF processing pipeline, while supporting \textbf{100+ concurrent users}}
                 \resumeItemListEnd
                   
             \resumeProjectHeading
-                {\href{https://rehabify.co}{Rehabify}}
+                {\href{https://rehabify.co}{\textt{\underline{Rehabify}}}}
                 {Jan 2025 -- Ongoing}
                 {Startup Project}
-                {\href{https://www.youtube.com/watch?v=rg0DGuQf09E}{Demo}}
+                {\href{https://www.youtube.com/watch?v=rg0DGuQf09E}{{\textt{\underline{Demo}}}}}
                 \resumeItemListStart
                     \resumeItem{Co-founded platform that translates  movements exercises into game controls}
                     \resumeItem{Delivered pitch presentations at multiple competitions, advancing to the finals and securing over \$30,000 in seed funding for Rehabify.}
@@ -217,7 +217,7 @@
             {Multiple Award-Winning Projects}{Singapore}
             \resumeItemListStart
                 \resumeItem{\textbf{NUS Hack4Good}: 1st Place (2025) |
-                \textbf{Dell InnovateDash}: 1st Runner-Up |
+                \textbf{Dell InnovateDash}: 1st Runner-Up (2025) |
                 \textbf{SimplifyNext RPA}: 1st Place (2024) | \textbf{MindfulHacks}: Finalist (2023)}
             \resumeItemListEnd
     \resumeSubHeadingListEnd
